[project]
name = "misthelper"
version = "2.1.0"
description = "Network operations tool for Juniper Mist cloud infrastructure management and monitoring"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joseph Morrison", email = "jmorrison@juniper.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology", 
    "Intended Audience :: Telecommunications Industry",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    # Core API and networking
    "mistapi>=0.3.0",
    "requests>=2.28.0",
    "websocket-client>=1.4.0",
    
    # CLI and user interface
    "prettytable>=3.5.0",
    "tqdm>=4.64.0",
    "sshkeyboard>=2.3.0",
    
    # Data processing
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    
    # Terminal emulation for SSH operations
    "pyte>=0.8.0",
    
    # Address parsing and fuzzy matching
    "usaddress-scourgify>=0.6.0",
    "rapidfuzz>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
container = [
    "uvicorn>=0.20.0",  # For potential web interface
]

[project.urls]
Homepage = "https://github.com/jmorrison-juniper/MistHelper"
Repository = "https://github.com/jmorrison-juniper/MistHelper.git"
Documentation = "https://github.com/jmorrison-juniper/MistHelper#readme"
Issues = "https://github.com/jmorrison-juniper/MistHelper/issues"

[project.scripts]
misthelper = "MistHelper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "setup.py",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
